--- a/src/App.css
+++ b/src/App.css
@@ -2,27 +2,41 @@
   box-sizing: border-box;
 }
 
-body {
-  background: linear-gradient(-30deg, #f4f397, #f8f671);
+html,
+body,
+#root {
+  padding: 0;
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans,
+    Helvetica Neue, sans-serif;
+  height: 100% !important;
 }
 
-li {
-  font-size: 20px;
-  font-weight: bold;
-  padding-bottom: 10px;
-  max-width: 500px;
-  list-style: none;
+body {
+  background: linear-gradient(-30deg, #E6FFE9, #E6FFE9);
 }
+
 
 input {
   height: 30px;
 }
 
-li button {
-  padding: 0px;
+form {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  outline: 0;
+  font-size: 100%;
+  vertical-align: baseline;
+  background: transparent;
+}
+
+form button {
   height: 30px;
-  line-height: 30px;
   width: 50px;
-  float: right;
-  margin-top: 0px;
+}
+
+ul {
+  list-style-type: none;
+  padding: 0;
 }
