--- a/src/components/Home/home.module.css
+++ b/src/components/Home/home.module.css
@@ -1,4 +1,4 @@
-.add-todo-content-input {
+.addTodoContentInput {
   width: 100%;
   font-size: 1.125rem;
   padding: 1rem 1.5rem;
@@ -11,7 +11,7 @@
   outline: none;
 }
 
-.add-btn {
+.addBtn {
   width: 100%;
   font-size: 1.125rem;
   padding: 1rem 1.5rem;
@@ -60,7 +60,7 @@
   justify-content: space-between;
 }
 
-.signout-btn {
+.signoutBtn {
   border: "none";
   padding: "0.5rem";
   border-radius: "2px";
