--- a/src/components/TodoItem/todoItem.module.css
+++ b/src/components/TodoItem/todoItem.module.css
@@ -10,11 +10,6 @@
   transition: 0.2s ease-in-out;
 
   justify-content: space-between;
-  margin-top: "1rem";
-  padding: "0.5rem";
-  border-radius: "10px";
-  max-width: "1000px";
-  list-style-type: "none";
 }
 
 .input {
@@ -22,18 +17,23 @@
   font-family: "Poppins", sans-serif;
   color: var(--white);
   background-color: var(--dark);
-  border: 0.8rem solid var(--dark);
+  border: 0 solid var(--purple);
+}
 
+.time {
+  display: block;
+  color: var(--purple);
 }
 
 .btn {
   background-color: var(--purple);
   color: var(--white);
-  border: 0.8rem solid var(--dark);
-  font-size: 1.1rem;
+  border: 0.1rem solid var(--dark);
+  font-size: 1.2rem;
   border-radius: 1rem;
   padding: 0.6rem;
-  width: 6rem;
+  width: 5rem;
+  cursor: pointer;
 }
 
 .saveEditBtnContainer {
@@ -43,3 +43,4 @@
 .deleteBtnContainer {
   padding-right: 0.5rem;
 }
+
